Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -115,7 +115,7 @@
    ],
    "source": [
     "agg_clust = AgglomerativeClustering(n_clusters=3)\n",
-    "\n",
+    "agg_clust\n",
     "assigned_clust = agg_clust.fit_predict(X)\n",
     "plt.scatter(X[:, 0], X[:, 1], c = assigned_clust, s = 10);"
    ]
